<resources>
  <string name="app_name">台北市運動中心</string>

  <string name="label_url">網址</string>
  <string name="hint_url">http://</string>
  <string name="btn_parse">解析</string>
  <string name="btn_reset">重設</string>

  <string name="lost_connection">失去網路連線</string>
  <string name="wifi_connected">Wi-Fi已連線</string>
  <string name="connection_error">無法找到可用連線，請檢查網路連線</string>
  <string name="connection_ok">網路已啟用，可載入API</string>
  <string name="str_parsing">查詢API中，請稍候</string>
  <string name="str_parsing_ok">解析成功</string>
  <string name="str_user_choose">你選擇的是：</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
</resources>
